# clienticons

./: CMakeLists.txt  README  clienticons.cpp  clienticons.h  clienticons.pri  clienticons.pro  definitions.h  iclienticons.h
resources/clienticons/shared/: icon.def.xml
translations/.tx/: config
translations/de/: clienticons.ts
translations/en/: clienticons.ts
translations/es/: clienticons.ts
translations/pl/: clienticons.ts
translations/ru/: clienticons.ts
translations/uk/: clienticons.ts
